Fixed: In Scene 3, if the masses are dragged off screen and released they disappear
Fixed: "Reset All" does not reset the atmosphere if it has been turned off
Updated licenses.txt for images
Switched from HSliderNode2 to HSliderNode1
Added screenshot for "under pressure"
# 0.00.60 (64116) May 11, 2012
Added "Under Pressure" standalone sim
# 0.00.59 (63946) May 4, 2012
Pressure tab: Made grid lines easier to see by having dark/light shading on each line
Pressure tab: Scene 1: Removed pool height side readout
Fixed: Speed sensor resizes when readout changes
# 0.00.58 (63939) May 4, 2012
Pressure tab: Scene 3: Fixed: always repainting even if nothing has moved
Changed the pool background cement to a solid color instead of textured
Pressure tab: Scene 3: Have the masses sit atop the grass instead of in front of it
Pressure tab: Scene 3: Fixed a bug which was preventing block velocity from going to zero when dropped on the ground (as seen in next drop)
Changed to pointy rectangular slider knobs
# 0.00.57 (63870) May 1, 2012
Water tower tab: Added a nozzle to the hose icon
Made pressure sensor read "-" instead of "0.000" when in the dirt/grass
Added original image assets for new textures
# 0.00.56 (63862) Apr 30, 2012
Added screenshot
Removed @Override annotation for interface implementations to facilitate testing under Java 1.5
Pressure tab: Fixed "seam" pattern in the grasses, visible when atmosphere was off
Pressure tab: Fixed cutaway earth graphics when atmosphere is off
Pressure tab: Moved the grass down a little bit because there is a blue "air" gap between the grass and the ground
Pressure tab: added border cement to the pools
Flow tab: updated handle image to be more visible against the brown earth color
Flow tab: Show earth cutaway
Pressure tab: Scene 3: Fixed: block dragging code doesn't have the right scale at full screen
Pressure tab: Made pool background gray and textured like concrete